<resources xmlns:tools="http://schemas.android.com/tools"
    tools:shrinkMode="strict">
    <string name="app_name">Dissertation</string>
    <string name="action_settings">Settings</string>
    <string name="title">SIAS Quiz</string>
    <string name="not_at_all">not at all</string>
    <string name="slightly">slightly</string>
    <string name="moderately">moderately</string>
    <string name="very">very</string>
    <string name="extremely">extremely</string>
    <string name="main_act_string">
        Please first allow permissions by toggling them in the settings, and then click the button below to start the SIAS evaluation.
        Once taken, the score will be displayed and then saved to your device.
        Once you have taken the test, please start the data collection using the second button.
        If you retake the test, the new score will not be saved.
        Please, do not clear any application space for the duration of the study.</string>
    <string name="start_sias_test">Start SIAS Test</string>
    <string name="shpref_prefix">level4dissertation2255541h</string>
    <string name="preference_file_key">level4dissertationprefs</string>
    <string name="q1">I get nervous if I have to speak with someone in authority (teacher, boss, etc.).</string>
    <string name="q2" tools:keep="@string/q2">I have difficulty making eye contact with others.</string>
    <string name="q3" tools:keep="@string/q3">I become tense if I have to talk about myself or my feelings.</string>
    <string name="q4" tools:keep="@string/q4">I find it difficult to mix comfortably with the people I work with.</string>
    <string name="q5" tools:keep="@string/q5">I find it easy to make friends my own age.</string>
    <string name="q6" tools:keep="@string/q6">I tense up if I meet an acquaintance in the street.</string>
    <string name="q7" tools:keep="@string/q7">When mixing socially, I am uncomfortable.</string>
    <string name="q8" tools:keep="@string/q8">I feel tense if I am alone with just one other person.</string>
    <string name="q9" tools:keep="@string/q9">I am at ease meeting people at parties, etc.</string>
    <string name="q10" tools:keep="@string/q10">I have difficulty talking with other people.</string>
    <string name="q11" tools:keep="@string/q11">I find it easy to think of things to talk about.</string>
    <string name="q12" tools:keep="@string/q12">I worry about expressing myself in case I appear awkward.</string>
    <string name="q13" tools:keep="@string/q13">I find it difficult to disagree with another’s point of view.</string>
    <string name="q14" tools:keep="@string/q14">I have difficulty talking to attractive persons of the opposite sex.</string>
    <string name="q15" tools:keep="@string/q15">I find myself worrying that I won’t know what to say in social situations.</string>
    <string name="q16" tools:keep="@string/q16">I am nervous mixing with people I don’t know well.</string>
    <string name="q17" tools:keep="@string/q17">I feel I’ll say something embarrassing when talking.</string>
    <string name="q18" tools:keep="@string/q18">When mixing in a group, I find myself worrying I will be ignored.</string>
    <string name="q19" tools:keep="@string/q19">I am tense mixing in a group.</string>
    <string name="q20" tools:keep="@string/q20">I am unsure whether to greet someone I know only slightly.</string>
    <string name="usage_stats_pref">usage_stats_pref</string>
    <string name="battery_opt_pref">battery_opt_pref</string>
    <string name="data_collection_is_off">Data Collection is Off</string>
    <string name="data_collection_is_on">Data Collection is On</string>
    <string name="keep_alive_service">keep_alive</string>
    <string name="alive_notif_text">Data is being collected in the background.</string>
    <string name="monitor_service">monitoring_service</string>
    <string name="boot_data_disabled">This is due to data collection being disabled in the app. Please click here to go to enable it.</string>
    <string name="boot_notif_title">Dissertation App Data Collection</string>
    <string name="see_personal_sias_pref">see_personal_sias_pref</string>
    <string name="license_pref">license_pref</string>
    <string name="opt_out_form">https://forms.gle/StjJQD2aHazvBnBy9</string>
    <string name="contact_form">https://forms.gle/SgiBmEpCoPztEeCg7</string>
    <string name="sias_url">https://en.wikipedia.org/wiki/Social_Interaction_Anxiety_Scale</string>
    <string name="learn_more_url">https://github.com/modelorona/level4dissertation/wiki/Data-that-is-collected-by-the-application</string>
    <string name="opt_out_pref">opt_out_pref</string>
    <string name="test_save_fail">Test could not save</string>
    <string name="thanks">Thank you</string>
    <string name="done">Finish</string>
    <string name="try_again">Try again</string>
    <string name="cancel">Cancel</string>
    <string name="save_fail_message">A system error occurred and the test score could not be saved. Please try again by clicking the button, or if the error persists, quit and immediately email me at 2255541h@student.gla.ac.uk.</string>
    <string name="know_more">If you would like to know more about this test, you can find more information in the application settings.</string>
    <string name="your_score">Thank you for taking the test. Your SIAS score is</string>
    <string name="dsn">https://400a55aa461746a0ab09da34d9fff81b@sentry.io/1876401</string>
    <string name="permissions" />
    <string name="enable_permissions">Please make sure to enable the Usage Statistics permisssion, then disable battery optimisations, then enable call permissions, and finally enable location permissions for the app to work as intended. You can find this in the settings.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="pref_data_record">_RECORDING_DATA</string>
    <string name="persistence_notif_id">persistence_notif_id</string>
    <string name="persistence_notif_desc">Shows a notification if data is being collected or not</string>
    <string name="persistence_notif_name">Persistent Notification Channel</string>
    <string name="persistence_notif_group">Persistent Notification Group</string>
    <string name="collection_on_boot_desc">Shows a notification whenever the phone restarts notifying the user if the data collection has resumed or not</string>
    <string name="collection_on_boot_name">On Boot Notification</string>
    <string name="collection_on_boot_id">collection_on_boot_id</string>
    <string name="collection_on_boot_group">On Boot Group</string>
    <string name="on_collection_name">On Data Collection Channel</string>
    <string name="on_collection_desc">Shows a notification whenever data is collected in a user session</string>
    <string name="on_collection_id">on_collection_id</string>
    <string name="on_collection_group" tools:keep="@string/on_collection_group">On Data Collection Group</string>
    <string name="undefined">UNDEFINED</string>
    <string name="name">name</string>
    <string name="category">category</string>
    <string name="package_name">packageName</string>
    <string name="session_start">sessionStart</string>
    <string name="session_end">sessionEnd</string>
    <string name="collection_occurred" tools:keep="@string/collection_occurred">Dissertation App Data Collection</string>
    <string name="fail_no_size" tools:keep="@string/fail_no_size">failure - no size</string>
    <string name="last_time_used">lastTimeUsed</string>
    <string name="total_time_in_foreground">totalTimeInForeground</string>
    <string name="last_time_visible">lastTimeVisible</string>
    <string name="last_time_foreground_service_used">lastTimeForegroundServiceUsed</string>
    <string name="total_time_foreground_service_used">totalTimeForegroundServiceUsed</string>
    <string name="total_time_visible">totalTimeVisible</string>
    <string name="success" tools:keep="@string/success">success</string>
    <string name="failure" tools:keep="@string/failure">failure</string>
    <string name="fail_crash" tools:keep="@string/fail_crash">failure - crash</string>
    <string name="not_yet_taken_test">You have not yet taken the test.</string>
    <string name="cliptext_id">dissertation user id</string>
    <string name="id_copied">Your personal identifier was copied to the clipboard.</string>
    <string name="data_col_resumed">Data collection has resumed</string>
    <string name="data_col_not_resumed">Data collection has not resumed.</string>
    <string name="app_category_db">AppCategory.db</string>
    <string name="log_events_db">LogEvents.db</string>
    <string name="userdata_db">UserData.db</string>
    <string name="export_data">Export Data</string>
    <string name="upload_data_service">upload_data_service</string>
    <string name="data_upload_started">Data upload has begun</string>
    <string name="data_upload_finished">Data upload has finished</string>
    <string name="data_upload_unavailable">Data upload is not available at the moment</string>
    <string name="data_can_upload_code">code</string>
    <string name="media_type">application/json; charset=utf-8</string>
    <string name="data_upload_key">key</string>
    <string name="data_upload_type">type</string>
    <string name="data_upload_type_session">session</string>
    <string name="data_upload_uid">uid</string>
    <string name="data_upload_sd">session_data</string>
    <string name="data_upload_ss">session_start</string>
    <string name="data_upload_se">session_end</string>
    <string name="data_upload_type_user">user</string>
    <string name="data_upload_type_category">category</string>
    <string name="data_upload_sias">sias</string>
    <string name="data_upload_app_name">app_name</string>
    <string name="data_upload_category">category</string>
    <string name="data_upload_app_package">app_package</string>
    <string name="call_db">Calls.db</string>
    <string name="unknown_fail_save">Failed to save data for unknown reason</string>
    <string name="sentry_forgot_permissions">App list null - no apps found - most likely forgot to enable permissions</string>
    <string name="sentry_fail_usagestats">Could not get application usage statistics</string>
    <string name="call_start">callStart</string>
    <string name="call_end">callEnd</string>
    <string name="call_permission_granted" tools:keep="@string/call_permission_granted">Call permission granted</string>
    <string name="call_pms">call_permission_pref</string>
    <string name="data_upload_type_call">call</string>
    <string name="data_upload_call_start">call_start</string>
    <string name="data_upload_call_end">call_end</string>
    <string name="on_data_export_name">On data export channel</string>
    <string name="on_data_export_desc">Shows a notification for data upload progress</string>
    <string name="on_data_export_id">on_data_export_id</string>
    <string name="data_export_group">Data export group</string>
    <string name="location_service">location_service</string>
    <string name="location_pref">location_pref</string>
    <string name="location_db">Locations.db</string>
    <string name="data_upload_type_location">location</string>
    <string name="data_upload_location_id">id</string>
    <string name="data_upload_location_altitude">altitude</string>
    <string name="data_upload_location_haccuracy">hAccuracy</string>
    <string name="data_upload_location_vaccuracy">vAccuracy</string>
    <string name="data_upload_location_bearing">bearing</string>
    <string name="data_upload_location_bearing_accuracy">bearingAccuracy</string>
    <string name="data_upload_location_latitude">latitude</string>
    <string name="data_upload_location_longitude">longitude</string>
    <string name="data_upload_location_speed">speed</string>
    <string name="data_upload_location_speed_accuracy">speedAccuracy</string>
</resources>